--- a/package.json
+++ b/package.json
@@ -6,17 +6,23 @@
   "scripts": {
     "build": "remix vite:build",
     "dev": "remix vite:dev",
-    "lint": "biome check --apply .",
+    "lint": "biome check",
     "format": "biome format --write .",
     "preview": "vite preview",
     "typecheck": "tsc"
   },
   "dependencies": {
+    "@chakra-ui/react": "^2.8.2",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
     "@remix-run/node": "^2.10.3",
     "@remix-run/react": "^2.10.3",
+    "framer-motion": "^11.3.6",
     "isbot": "^5.1.13",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "zod": "^3.23.8",
+    "zustand": "^4.5.4"
   },
   "devDependencies": {
     "@biomejs/biome": "1.8.3",
