--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@remix-run/node": "^2.10.3",
     "@remix-run/react": "^2.10.3",
     "framer-motion": "^11.3.6",
+    "immer": "^10.1.1",
     "isbot": "^5.1.13",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
