--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
   },
   "dependencies": {
     "@chakra-ui/react": "^2.8.2",
+    "@emotion/cache": "^11.11.0",
     "@emotion/react": "^11.11.4",
+    "@emotion/server": "^11",
     "@emotion/styled": "^11.11.5",
     "@remix-run/node": "^2.10.3",
     "@remix-run/react": "^2.10.3",
-    "framer-motion": "^11.3.6",
+    "framer-motion": "^6.5.1",
     "immer": "^10.1.1",
     "isbot": "^5.1.13",
     "react": "^18.2.0",
