--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "framer-motion": "^6.5.1",
     "immer": "^10.1.1",
     "isbot": "^5.1.13",
+    "jotai": "^2.9.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "zod": "^3.23.8",
